<resources>
    <string name="app_name">西法大教务</string>
    <string name="account_hint">请输入学号</string>
    <string name="password_hint">请输入密码</string>
    <string name="vcode_hint">验证码</string>
    <string name="mounth">月</string>
    <string name="day">日</string>
    <string name="privacyPolicy">"""本软件尊重并保护所有使用服务用户的个人隐私权，并会不时更新本隐私权政策。本隐私权政策属于用户协议不可分割的一部分。

一.适用范围

在您使用本软件网络服务时，本软件会向教务平台请求您的个人信息

二.权限的使用

2.1 网络权限

为了获取您的教务平台信息，需要使用网络权限以连接校务平台

2.2 本地储存权限

本软件不会请求安卓本地储存权限，但在获得您的数据之后，本软件会将其缓存至app专有目录以便于下次访问

三.信息披露

本软件私自不会将您的信息上传至云端或披露给任何第三方。除非根据法律的有关规定，或者行政或司法机构的要求，向第三方或者行政、司法机构披露

四.信息存储和交换

本软件收集的有关您的信息将保存在本地，不会被云端访问、存储和展示

五.信息安全

在使用本软件网络服务进行教务查询时，您不可避免的要使用账号或密码进行登录，并获取有关自己的个人信息。请您妥善保护，不要向他人提供。"""</string>
    <string name="userAgreement"> """软件著作权人特别提醒用户认真阅读《西北政法轻教务服务协议》（以下简称“本协议”）（软件简称“本软件”）。除非你已阅读并接受本协议的所有条款，否则你无权使用本软件及相关服务。你的使用、登录等行为即视为你已阅读并同意上述协议的约束。

一、协议的范围

1.1协议适用主体范围

本协议是你与个人开发者“比赤红色更暗的梦”（以下简称“开发者”）之间关于你下载、安装、使用、复制本软件，以及使用相关服务所订立的协议。

二、服务内容

本服务的内容是指开发者向用户提供的安卓平台的教务客户端，为用户提供包括但不限于个人资料、课程表和成绩查询等功能的软件许可及服务。

三、软件更新

3.1为了改善用户体验、完善服务内容，开发者将不断努力开发新的服务，并不时地提供软件更新。

3.2开发者有权不经向你特别通知而对软件进行更新，或对软件的功能效果进行改变，以保证本软件的安全性和功能的一致性。

3.3本软件新版发布后，旧的版本可能无法使用，请随时核对并下载使用最新版本。

3.4开发者有权更新本软件的《隐私协议》和《用户协议》，并经用户同意后生效。

四、用户个人信息的保护

4.1保护用户个人信息的安全是本软件的一项基本原则，开发者将会采用合理的保护措施保护用户的个人信息。除法律法规规定的情形外，未经用户许可不会向第三方公开、透露用户个人信息，开发者对个人相关信息采用专业的加密存储与传输方式，保障用户个人信息的安全。

4.2你在使用本服务的过程中，需要提供一些必要的信息，例如：进行用户身份识别，若你提供的信息不完整，则无法使用本服务或者在使用过程中受到限制。

五、主权利义务条款

5.1你在使用本服务前需要获取西北政法教务平台的账号密码

5.2你理解并同意：为了向你提供有效的服务，本软件利用终端设备的处理器和带宽等资源。本软件在使用的过程中会产生数据流量费用，用户需自行向运营商了解相关资费信息，并自行承担相关费用。

5.2你理解并同意开发者不会上传或共享您的个人信息，但是，开发者不能就此提供完全的保障，包括但不仅限于以下情形：

5.3用户在使用本软件及服务时，须自行承担如下不可掌控的风险，包括但不限于：

5.3.1由于不可抗拒因素可能引起的个人信息丢失、泄露等风险；

5.3.2用户必须选择与所安装终端设备相匹配的软件版本，否则，由于软件与终端设备型号不相匹配所导致的任何问题和损害，均由用户自行承担；

5.3.3由于无线信号网络不稳定、无线网络带宽小等原因，所引起的登录失败，资料同步不完整，页面打开缓慢等风险。

六、用户行为规范

6.1.1本条所述信息内容是指用户使用本软件及服务过程中所制作、复制、发布、传播的任何内容，包括但不限于教务账号、个人资料，或文字、语言、图片等发送、回传的图文及相关链接，以及使用其他账号或本软件及服务所产生的内容。

6.1.2你理解并同意，开发者一直致力于为用户提供文明健康、规范有序的网络环境，你不得利用本软件及服务制作、复制、发布、传播如下干扰软件运行、以及侵犯第三方合法权益的内容，包括但不限于：

6.1.2.1发布、传送、传播、储存违反国家法律法规禁止的内容；

(1)违反宪法规定的基本原则的；

(2)国家安全，泄露国家私密，颠覆国家政权，破坏国家统一的；

(3)损害国家荣誉和利益的；

(4)煽动民族仇恨、民族歧视，破坏民族团结的；

(5)破坏国家宗教政策，宣扬邪教和封建迷信的；

(6)散布谣言，扰乱社会秩序，破坏社会稳定的；

(7)散布淫秽、色情、赌博、暴力、恐怖或者教唆犯罪的；

(8)侮辱或者诽谤他人，侵害他人合法权益的；

(9)煽动非法集会、结社、游行、示威、聚众扰乱社会秩序；

(10)以非法民间组织名义活动的；

(11)含有法律、行政法规禁止的其他内容的。

6.1.2.2发布、传送、传播、储存侵害他人名誉权、肖像权、知识产权、商业秘密等合法权利的内容。

6.1.2.3涉及他人隐私、个人信息或资料的；

6.1.2.4发表、传送、传播骚扰、广告信息及垃圾信息或者含有任何性或者性暗示的；

6.1.2.5其他违反法律法规、政策及公序良俗、社会公德或干扰本软件正常运行和侵犯其他用户或第三方合法权益内容的信息。

6.2软件使用规范

除非法律允许或开发者书面许可，你使用本软件过程中不得从事下列行为：

6.2.1删除本软件及副本上关于著作权的信息；

6.2.2对本软件进行反向工程，反向汇编，反向编译，或者以其他方式尝试发现本软件的源代码；

6.2.3对开发者拥有知识产权的内容进行使用，出租、出借、复制、修改、链接、转载、汇编、发表、出版、建立镜像站点等；

6.2.4通过修改或伪造软件运行中的指令、数据，增加、删除、变动软件的功能或运行效果，或者将用于上述用途的软件、方法进行运营或向公众传播，无论这些行为是否是商业目的；

6.2.5通过非开发者开发、授权的第三方软件、插件、外挂、系统，登录或使用本软件及服务，或制作、发布、传播上述工具；

6.2.6自行或者授权他人、第三方软件对本软件及其组件、模块、数据进行干扰；

6.2.7其他未经开发者明示授权的行为。

6.3服务运营规范

除非法律允许或开发者书面许可，您使用本服务过程中不得从事下列行为：

6.3.1提交、发布虚假信息；

6.3.2诱导其他用户点击链接页面或分享信息的；

6.3.3虚构事实，隐瞒真相以及误导、欺骗他人的；

6.3.4侵害他人名誉权、肖像权、知识产权、商业秘密等合法权益的；

6.3.5利用本软件及服务从事任何违法犯罪的活动的；

6.3.6制作、发布与以上行为相关的方法，工具，或对此类方法、工具进行运营或传播，无论这些行为是否以商业为目的；

6.3.7其他违反法律法规规定、侵犯其他用户合法权益，干扰产品正常运营或开发者未明示授权的行为。

6.4对自己的行为负责

你充分了解并同意，你必须为自己所有账号下的一切行为负责，包括你所发表的任何内容以及由此产生的任何后果。开发者无法且不会对因前述风险而导致的任何损失或损害承担责任。

九、知识产权声明

9.1“比赤红色更暗的梦”是本软件的知识产权权利人，本软件的一切著作权、商标权、专利权、商业秘密等知识产权，以及与本软件相关的所有信息内容（包括但不限于文字、图片、音频、视频、图表、界面设计、版面框架、有关数据或电子文档等）均受中华人民共和国法律法规的保护，开发者享有上述知识产权。

十、其他

10.1你使用本软件即视为你已阅读并同意受本协议的约束。开发者有权在必要时修改本协议条款。本协议条款变更后会通知用户并重新进行确认，如果你不接受修改后的协议，应当停止使用本软件。

10.2本协议的成立、生效、履行、解释及纠纷解决，适用中华人民共和国大陆地区法律。"""
</string>
    <string name="login_button_text">点击以登录</string>
    <string name="login_hint">请使用学号登录</string>
    <string name="login_agreement_text">阅读《用户条款》和《隐私政策》</string>
    <string name="vcode_description">验证码图片</string>
</resources>